commit final tentativo 2

--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
             </article>
             <div class="grupo-iconos-logo">
                 <article class="iconos">
-                    <a href="https://www.facebook.com/"><img src="./img/icon-facebook.svg" alt="icono facebook"></a>
-                    <a href="https://www.youtube.com/"><img src="./img/icon-youtube.svg" alt="icono youtube"></a>
-                    <a href="https://www.twitter.com/"><img src="./img/icon-twitter.svg" alt="icono twitter"></a>
-                    <a href="https://www.pinterest.com/"><img src="./img/icon-pinterest.svg" alt="icono pinterest"></a>
-                    <a href="https://www.instagram.com/"><img src="./img/icon-instagram.svg" alt="icono instagram"></a>
+                    <a href="https://www.facebook.com/" target="_blank"><img src="./img/icon-facebook.svg" alt="icono facebook"></a>
+                    <a href="https://www.youtube.com/" target="_blank"><img src="./img/icon-youtube.svg" alt="icono youtube"></a>
+                    <a href="https://www.twitter.com/" target="_blank"><img src="./img/icon-twitter.svg" alt="icono twitter"></a>
+                    <a href="https://www.pinterest.com/" target="_blank"><img src="./img/icon-pinterest.svg" alt="icono pinterest"></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="./img/icon-instagram.svg" alt="icono instagram"></a>
                 </article>
                 <article>
                     <img src="./img/logo_footer.png" alt="logo footer">
