commit test animaciones hover y active

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             <article>
                 <div>
                     <nav>
-                        <ul type="none" class="barra-navegacion-pc">
-                            <li class="li-header">Pricing</li>
-                            <li class="li-header">Product</li>
-                            <li class="li-header">About Us</li>
-                            <li class="li-header">Careers</li>
-                            <li class="li-header">Community</li>
+                        <ul class="barra-navegacion-pc">
+                            <li>Pricing</li>
+                            <li>Product</li>
+                            <li>About Us</li>
+                            <li>Careers</li>
+                            <li>Community</li>
                         </ul>
                     </nav>
                 </div>                              
@@ -178,12 +178,12 @@
                     <label for="email" id="input"></label>
                     <input type="email" name="usuario_correo" id="name" placeholder="Updates in your inbox..." class="input">
                                 
-                    <button class="botones">GO</button>
+                    <button type="submit" class="botones">Go</button>
                 </form>
             </article>
             <article class="listas-footer">
                 <div>
-                    <ul type="none">
+                    <ul>
                         <li>Pricing</li>
                         <li>Home</li>
                         <li>Products</li>
@@ -191,7 +191,7 @@
                     </ul>
                 </div>
                 <div>
-                    <ul type="none">
+                    <ul>
                         <li>Careers</li>
                         <li>Community</li>
                         <li>Private Policy</li>
@@ -219,10 +219,10 @@
                 <article class="form">
 
                     <form action="" method="post" class="form-footer">
-                        <label for="email" id="input"></label>
-                        <input type="email" name="usuario_correo" id="name" placeholder="Updates in your inbox..." class="input">
+                        <label for="email"></label>
+                        <input type="email" name="usuario_correo" id="email" placeholder="Updates in your inbox..." class="input">
                                     
-                        <button class="botones">GO</button>
+                        <button type="submit" class="botones">Go</button>
                     </form>
                 </article>
                 <article class="derechos">
